Rendern eines optionalen Layouts anhand der Variante

--- a/Resources/Private/Templates/Modulor.html
+++ b/Resources/Private/Templates/Modulor.html
@@ -1,9 +1,11 @@
 <html xmlns:f="http://typo3.org/ns/TYPO3/CMS/Fluid/ViewHelpers" xmlns:fo="http://typo3.org/ns/Ps14/Foundation/ViewHelpers" data-namespace-typo3-fluid="true">
 	<f:layout name="Default" />
 	<f:section name="Main">
-		<f:render section="Bodytext" arguments="{_all}" />
-		<f:render section="Images" arguments="{_all}" />
-		<f:render section="Elements" arguments="{_all}" />
+		<f:render partial="Modulor/Layout/{data.tx_foundation_variant -> fo:format.pascalCase()}" optional="1" arguments="{_all}">
+			<f:render section="Bodytext" arguments="{_all}" />
+			<f:render section="Images" arguments="{_all}" />
+			<f:render section="Elements" arguments="{_all}" />
+		</f:render>
 	</f:section>
 
 	<f:section name="Bodytext">
